# live-broadcast-dubbing

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  023-VAD-CONSISTENCY-ANALYSIS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_STREAM_INIT_FIX.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SOCKET_IO_FIX.md  SOCKET_IO_RESOLUTION.md  WORKTREES.md  claude_settings_local_example.json  pyproject.toml  pytest.ini  pytest_markers.ini  requirements-dev.txt  restart_full_sts.sh
apps/media-service/: .env.e2e.example  .env.example  .env.production.example  .env.test.example  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  requirements.txt
apps/media-service/deploy/: Dockerfile
apps/media-service/deploy/mediamtx/: mediamtx.yml
apps/media-service/deploy/mediamtx/hooks/: mtx-hook  test_mtx_hook.py
apps/media-service/docs/: fix-video-timing-mpeg-ts.md
apps/media-service/src/media_service/: logging_config.py  main.py
apps/media-service/src/media_service/api/: hooks.py
apps/media-service/src/media_service/audio/: __init__.py  segment_writer.py
apps/media-service/src/media_service/buffer/: __init__.py  segment_buffer.py
apps/media-service/src/media_service/config/: __init__.py  segmentation_config.py
apps/media-service/src/media_service/metrics/: __init__.py  prometheus.py
apps/media-service/src/media_service/models/: __init__.py  events.py  segments.py  state.py
apps/media-service/src/media_service/orchestrator/: __init__.py  worker_manager.py
apps/media-service/src/media_service/pipeline/: __init__.py  elements.py  ffmpeg_output.py  input.py  output.py
apps/media-service/src/media_service/sts/: __init__.py  backpressure_handler.py  circuit_breaker.py  fragment_tracker.py  models.py  reconnection_manager.py  socketio_client.py
apps/media-service/src/media_service/sync/: __init__.py  av_sync.py
apps/media-service/src/media_service/vad/: __init__.py  level_message_extractor.py  vad_audio_segmenter.py
apps/media-service/src/media_service/video/: __init__.py  segment_writer.py
apps/media-service/src/media_service/worker/: __init__.py  stream_worker.py  worker_runner.py
apps/media-service/tests/: conftest.py
apps/media-service/tests/contract/: __init__.py  test_hook_schema.py
apps/media-service/tests/integration/: README.md  __init__.py  conftest.py  test_media_service_startup.py  test_mediamtx_startup.py  test_observability.py  test_publish_and_playback.py  test_rtmp_publish_hook.py  test_segment_pipeline.py  test_service_communication.py
apps/media-service/tests/unit/: test_audio_segment_writer.py  test_av_sync.py  test_av_sync_comprehensive.py  test_av_sync_pts_matching.py  test_backpressure_handler.py  test_elements.py  test_ffmpeg_output_pipeline.py  test_fragment_tracker.py  test_input_pipeline.py  test_metrics_endpoint.py  test_models_segments.py  test_models_state.py  test_output_pipeline.py  test_reconnection_manager.py  test_segment_buffer.py  test_stream_worker.py  test_sts_circuit_breaker.py  test_sts_models.py  test_sts_socketio_client.py  test_video_segment_writer.py  test_worker_manager.py  test_worker_metrics.py  test_worker_runner.py
apps/media-service/tests/unit/buffer/: __init__.py
apps/media-service/tests/unit/config/: test_segmentation_config.py
apps/media-service/tests/unit/pipeline/: test_input_pipeline_level.py
apps/media-service/tests/unit/vad/: __init__.py  test_level_message_extractor.py  test_vad_audio_segmenter.py
apps/stream-infrastructure/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/sts-service/: .env  .env.e2e.example  .env.example  README.full.md  README.md  diagnose_client.py  diagnose_socketio.py  docker-compose.e2e.yml  docker-compose.elevenlabs.yml  docker-compose.full.yml  docker-compose.yml  manual_test_client.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements-elevenlabs.txt  requirements.txt  test_tts_output.py
apps/sts-service/artifacts/: README.md
apps/sts-service/artifacts/manual-test-stream/manual-test-001/: dubbed_audio.m4a  transcript.txt  translation.txt
apps/sts-service/config/: voices.json
apps/sts-service/configs/: coqui-voices.yaml
apps/sts-service/deploy/: Dockerfile  Dockerfile.echo  Dockerfile.elevenlabs  Dockerfile.full
apps/sts-service/src/sts_service/: main.py
apps/sts-service/src/sts_service/asr/: __init__.py  confidence.py  domain_prompts.py  errors.py  factory.py  interface.py  mock.py  models.py  postprocessing.py  preprocessing.py  transcriber.py
apps/sts-service/src/sts_service/echo/: __init__.py  __main__.py  auth.py  config.py  server.py  session.py
apps/sts-service/src/sts_service/full/: __init__.py  __main__.py  backpressure_tracker.py  config.py  fragment_queue.py  main.py  models.py  pipeline.py  server.py  session.py
apps/sts-service/src/sts_service/translation/: __init__.py  deepl_provider.py  errors.py  mock.py  (+6 more)
apps/sts-service/tests/: conftest.py
apps/sts-service/tests/contract/: test_backpressure_schema.py  test_error_schema.py  test_fragment_schemas.py  test_stream_schemas.py
apps/sts-service/tests/e2e/: README.md  __init__.py  conftest.py  test_full_pipeline_e2e.py
apps/sts-service/tests/integration/: __init__.py
libs/common/: README.md  pyproject.toml
libs/contracts/: README.md  pyproject.toml
(+405 files in other folders)
