[project]
name = "stream-infrastructure"
version = "0.1.0"
description = "EC2 stream worker for live broadcast dubbing (CPU-only GStreamer pipeline)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy<2.0",
    "scipy",
    "soundfile",
    "pyyaml",
    "pydantic>=2.0",
    "rich",
    "typer",
    # CPU-only PyTorch (lighter weight)
    # Note: Install with --extra-index-url https://download.pytorch.org/whl/cpu
    # Shared internal packages
    "dubbing-common",
    "dubbing-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
