[project]
name = "sts-service"
version = "0.1.0"
description = "RunPod GPU service for speech-to-speech processing (ASR + Translation + TTS)"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy<2.0",
    "scipy",
    "soundfile",
    "pyyaml",
    "pydantic>=2.0",
    "rich",
    # GPU-enabled PyTorch (CUDA 11.8)
    # Note: Install with --extra-index-url https://download.pytorch.org/whl/cu118
    # ML models
    "faster-whisper>=0.10.0",
    "transformers>=4.35.0",
    "sentencepiece",
    # API server
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Socket.IO for Echo STS Service
    "python-socketio[asyncio]>=5.0",
    # Translation
    "deepl>=1.0.0",
    # Shared internal packages
    "dubbing-common",
    "dubbing-contracts",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock>=3.0",  # For mocking in tests
    "mypy>=1.0",
    "ruff>=0.1.0",
    "httpx",  # For API testing
    "python-socketio[asyncio_client]>=5.0",  # For Socket.IO client testing
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Test configuration
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Markers
markers = [
    "e2e: End-to-end tests requiring Docker services (slow)",
    "integration: Integration tests requiring external services",
    "unit: Fast unit tests with mocked dependencies",
]

# Async support
asyncio_mode = "auto"

# Coverage
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

# Logging
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s - %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
