[project]
name = "dubbing-common"
version = "0.1.0"
description = "Common utilities for live broadcast dubbing (audio, types, logging)"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy<2.0",
    "pyyaml",
    "pydantic>=2.0",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
