[project]
name = "dubbing-contracts"
version = "0.1.0"
description = "API contracts and event schemas for live broadcast dubbing"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
